# Bifrost_String2

./: CMakeLists.txt  LICENSE  README.md
output/Bifrost2.12.0.0-2024/String2-1.0.0/: String2PackConfig.json
output/Bifrost2.12.0.0-2024/String2-1.0.0/lib/: String2Ops.lib
output/Bifrost2.12.0.0/String2-1.0.0/json/String2/: String2.json  validate_string.json
src/: CMakeLists.txt  PackConfig.json.in  String2.cpp  String2.h  String2Export.h
